--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # Site settings
-baseURL = "http://example.org/"
+baseURL = "http://association-tedua.fr"
 languageCode = "en-us"
 title = "TeDua te bienvenue"
 theme = "forty"
