--- a/config.toml
+++ b/config.toml
@@ -91,7 +91,7 @@ disqusShortname = ""
 
     [[params.tiles.showcase]]
       title = "Infos pratiques"
-      subtitle = "Droit d'entrée pour la semaine. Transports et Plan pour venir au Cerisier [clique ici-->]"
+      subtitle = "Inscriptions et dons pour la semaine. Transports et plan pour venir au Cerisier, Bordeaux-Bacalan. [clique ici-->]"
       image = "pic06.jpg"
       url = "blogs/infos-pratiques"
 
